--- a/PetDopt/src/assets/components/header/Header.css
+++ b/PetDopt/src/assets/components/header/Header.css
@@ -4,7 +4,17 @@
 }
 
 .top-bar {
+    display: flex;
     background-color: #2F4858;
     width: 100%;
     height: 25vw;
+}
+
+.icons{
+    width: 50%;
+    justify-content: space-around;
+    padding-left: 4em;
+    padding-right: 1em;
+    align-items: center;
+    font-size: x-large;
 }
