--- a/PetDopt/src/assets/components/imagesWithName/ImagesWithName.css
+++ b/PetDopt/src/assets/components/imagesWithName/ImagesWithName.css
@@ -20,8 +20,8 @@
   width: 70%;
   display: flex;
   justify-content: center;
-  color: black;
-  background-color: #D9D9D9;
+  color: white;
+  background-color: #0C6774;
   border-bottom-left-radius: 1.5em;
   border-bottom-right-radius: 1.5em;
   font-family: "Kalam";
